tests/invalid/api/deprecated_api.php
<?php

mysql_connect('localhost', 'user', 'pass');
create_function('$a', 'return $a;');

